--- a/public/style.css
+++ b/public/style.css
@@ -45,7 +45,6 @@ body {
 
 /* Headings */
 h1, h2, h3 {
-    margin-bottom: 10px;
     color: #222;
 }
 .center {
@@ -131,3 +130,7 @@ input, select, textarea {
     background-color: #cc0000;
 }
 
+.user-name{
+    color: rgb(155, 155, 155);
+    text-align: right;
+}
